--- a/Traveller.UI/wwwroot/html/dashboard/dashboardWorkList.html
+++ b/Traveller.UI/wwwroot/html/dashboard/dashboardWorkList.html
@@ -1,7 +1,7 @@
 
 <div>
     <div class="d-flex align-items-center justify-content-between my-3" style="border-bottom:1px solid #CDD5E9">
-        <div class="main-heading">User WorkList</div>
+        <div class="main-heading">User WorkList- <h3 style="color: darkblue; display: inline-block;" id="UserWorklistTypeTitle">Work in Progress</h3></div>
     </div>
     <div>
 
@@ -9,21 +9,15 @@
             <div class="tab-pane fade show active" id="TabularViewDiv" role="tabpanel">
                 <!--Tabs-->
                 <div class="nav nav-tabs tra_tab" id="nav-tab" role="tablist" onmouseout="window.dispatchEvent(new Event('resize'));">
-                    <a class="active" data-toggle="tab" href="#tab1" role="tab" aria-selected="true">Work in progress</a>
-                    <a class="InProgress" data-toggle="tab" href="#tab2" role="tab" aria-selected="true">Assigned to me</a>
-                    <a data-toggle="tab" href="#tab3" role="tab" aria-selected="false">Open Tickets</a>
-                    <a data-toggle="tab" href="#tab4" role="tab" aria-selected="false">Closed Tickets</a>
-                    <a data-toggle="tab" href="#tab5" role="tab" aria-selected="false">Assigned to Others</a>
+                    <a class="active" data-toggle="tab" href="#tab1" role="tab" aria-selected="true" onclick="DashboardWorkList.InProgressTicketTabOnClick()">Work in progress</a>
+                    <a class="InProgress" data-toggle="tab" href="#tab2" role="tab" aria-selected="true" onclick="DashboardWorkList.AssignedToMeTicketTabOnClick()">Assigned to me</a>
+                    <a data-toggle="tab" href="#tab3" role="tab" aria-selected="false" onclick="DashboardWorkList.OpenTicketTabOnClick()">Open Tickets</a>
+                    <a data-toggle="tab" href="#tab4" role="tab" aria-selected="false" onclick="DashboardWorkList.ClosedTicketTabOnClick()">Closed Tickets</a>
+                    <a data-toggle="tab" href="#tab5" role="tab" aria-selected="false" onclick="DashboardWorkList.AssignedToOthersTicketTabOnClick()">Assigned to Others</a>
                 </div>
 
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="tab1" role="tabpanel" style="padding-bottom: 50px;">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <h3 style="color:darkblue;">Work in Progress</h3>
-                                <br />
-                            </div>
-                        </div>
                         <div class="row">
                             <div style="bottom: 10px;" class="col-md-12">
                                 <table id="ClientWorkInProgressListTbl" class="table table-bordered com_table" style="width: 100%;">
@@ -54,12 +48,6 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="tab2" role="tabpanel">
-                        <div class="row col-md-12">
-                            <div class="col-md-12">
-                                <h3 style="color:darkblue;">Assigned to Me</h3>
-                                <br />
-                            </div>
-                        </div>
                         <div class="row">
                             <div style="bottom: 10px;" class="col-md-12">
                                 <table id="ClientAssignedToMeListTbl" class="table table-bordered com_table" style="width: 100%;">
@@ -91,12 +79,6 @@
                     </div>
                     <div class="tab-pane fade" id="tab3" role="tabpanel">
                         <div class="row">
-                            <div class="col-md-12">
-                                <h3 style="color:darkblue;">Open Tickets</h3>
-                                <br />
-                            </div>
-                        </div>
-                        <div class="row">
                             <div style="bottom: 10px;" class="col-md-12">
                                 <table id="ClientOpenTicketsListTbl" class="table table-bordered com_table" style="width: 100%;">
                                     <thead>
@@ -127,10 +109,6 @@
                     </div>
                     <div class="tab-pane fade" id="tab4" role="tabpanel">
                         <div class="row">
-                            <div class="col-md-6">
-                                <h3 style="color:darkblue;">Closed Tickets</h3>
-                                <br />
-                            </div>
                             <div class="col-md-6">
                                 <div class="row">
                                     <div class="col-md-2">
@@ -187,12 +165,6 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="tab5" role="tabpanel">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <h3 style="color:darkblue;">Assigned to Others</h3>
-                                <br />
-                            </div>
-                        </div>
                         <div class="row">
                             <div style="bottom: 10px;" class="col-md-12">
                                 <table id="ClientAssignedToOthersListTbl" class="table table-bordered com_table" style="width: 100%;">
