--- a/AngularClient/src/index.html
+++ b/AngularClient/src/index.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body id="page-top" class="sidebar-toggled mat-typography">
+<body id="page-top" class="sidebar-toggled">
   <app-root></app-root>
 </body>
 
